--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Luu's Persona; Website</title>
+  <title>Luu's Personal Website</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
